# resolveai-multi-agent

./: .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml  deploy-gcp.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  endpoints.py
backend/app/core/: config.py  constants.py  cost_tracker.py  exception.py  langsmith_setup.py  logger.py
backend/app/storage/: persistence.py
backend/app/workflow/: agents.py  graph.py  llm.py  runner.py  state.py  tools.py  visualize.py
backend/tests/: conftest.py  test_chat.py  test_health.py  test_runner.py
docs/: API.md  HLD.md  INSTALLATION.md  LLD.md  TDD.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/aceternity/: AnimatedTabs.tsx  Card.tsx  Container.tsx  FeaturePills.tsx  GlowButton.tsx  ShimmerBorder.tsx  Spotlight.tsx
frontend/src/components/trace/: TracePanel.tsx
frontend/src/lib/: api.ts
